...
    <string name="player_pause">Pause</string>
    <string name="player_next">Next</string>
    <string name="full_screen_player">Full screen player</string>
    <string name="player_seek">Playback position</string>
    <string name="player_volume">Music volume</string>
    <string name="player_heart">Favorite</string>
    <string name="player_more">More options</string>
    <string name="player_shuffle">Shuffle</string>
    <string name="player_shuffle_on">Shuffle on</string>
    <string name="player_repeat">Repeat</string>
    <string name="player_repeat_off">Repeat off</string>
    <string name="player_repeat_all">Repeat all</string>
    <string name="player_repeat_one">Repeat one</string>
    <string name="player_lyrics">Lyrics</string>
    <string name="player_lyrics_not_available">Lyrics are not available for this track.</string>
    <string name="player_cast">Cast</string>
    <string name="player_queue">Queue</string>
    <string name="player_queue_drag_handle">Reorder track</string>
    <string name="playlist_reorder">Reorder playlist</string>
    <string name="playlist_reorder_drag_handle">Drag to reorder track</string>
    <string name="playlist_reorder_done">Done reordering</string>
    <string name="player_queue_current">Currently playing</string>
    <string name="player_queue_unknown_track">Unavailable track</string>
    <string name="library_artists">Artists</string>
    <string name="library_albums">Albums</string>
    <string name="library_tracks">Tracks</string>
    <string name="library_genres">Genres</string>
...
    <string name="library_favorites">Favorites</string>
    <string name="playlists_empty_title">No playlists in library</string>
    <string name="playlists_empty_description">Create a playlist to see it here.</string>
    <string name="playlist_row_open">Open playlist</string>
    <string name="playlist_create">Create playlist</string>
    <string name="playlist_create_title">Create playlist</string>
    <string name="playlist_edit">Edit playlist</string>
    <string name="playlist_edit_title">Edit playlist</string>
    <string name="playlist_delete">Delete playlist</string>
    <string name="playlist_delete_confirm_title">Delete playlist?</string>
    <string name="playlist_delete_confirm_description">This playlist will be deleted from your desktop the next time it syncs.</string>
    <string name="playlist_name">Playlist name</string>
    <string name="playlist_choose_artwork">Choose playlist artwork</string>
    <string name="playlist_clear_artwork">Clear playlist artwork</string>
    <string name="bottom_sheet_dismiss">Dismiss sheet</string>
...
    <string name="sort_name">Name</string>
    <string name="sort_artist">Artist</string>
    <string name="sort_play_count">Play count</string>
    <string name="sort_date_added">Date added</string>
    <string name="sort_order_asc">Ascending</string>
    <string name="sort_order_desc">Descending</string>
    <string name="track_row_more_options">Track options</string>
    <string name="track_context_menu_title">Track options</string>
    <string name="track_context_play_next">Play next</string>
    <string name="track_context_add_to_queue">Add to queue</string>
    <string name="track_context_start_mood_radio">Start Mood Radio</string>
    <string name="track_context_remove_from_queue">Remove from queue</string>
    <string name="track_context_track_info">Track info</string>
    <string name="track_context_find_lyrics">Find lyrics</string>
    <string name="track_context_find_lyrics_title">Find Lyrics</string>
    <string name="find_lyrics_track_title">Track title</string>
...
    <string name="find_lyrics_no_results">No lyrics found</string>
    <string name="find_lyrics_preview">Lyrics preview</string>
    <string name="find_lyrics_select">Select</string>
    <string name="track_context_add_to_favorites">Add to favorites</string>
    <string name="track_context_remove_from_favorites">Remove from favorites</string>
    <string name="track_context_add_to_playlist">Add to playlist</string>
    <string name="track_context_remove_from_playlist">Remove from playlist</string>
    <string name="track_context_go_to_album">Go to album</string>
    <string name="track_context_go_to_artist">Go to %1$s</string>
    <string name="track_context_go_to_artists">Go to artists</string>
    <string name="track_context_artist_picker_title">Artists</string>
    <string name="track_context_playlist_picker_title">Add to playlist</string>
    <string name="track_context_create_playlist">Create playlist</string>
...
